--- a/.github/workflows/docker-image-builder.yml
+++ b/.github/workflows/docker-image-builder.yml
@@ -3,7 +3,7 @@ name: '[builder] CI for releases'
 on:
     push:
         branches:
-            - master
+            - main
 
 jobs:
     release:
