--- a/.github/workflows/docker-image-builder.yml
+++ b/.github/workflows/docker-image-builder.yml
@@ -31,4 +31,4 @@ jobs:
       - name: Build dockerfile (with push)
         run: |
           docker buildx build \
-          --platform linux/amd64,linux/arm/v7,linux/arm64 . 
+          --platform linux/amd64,linux/arm/v7,linux/arm64 --push . 
