--- a/.github/workflows/docker-image-builder.yml
+++ b/.github/workflows/docker-image-builder.yml
@@ -32,4 +32,4 @@ jobs:
         run: |
           docker buildx build \
           --platform linux/amd64,linux/arm/v7,linux/arm64 \
-          --push --tag latest . 
+          --push --tag ceedee666/py-echo-server:latest . 
